# vocechat-chatbot-python

./: Dockerfile  README.md  README_EN.md  config.yaml  pyproject.toml  setup.py  vocechat-chatbot.spec
src/: auth.py  baidu_server.py  config.py  cron_scheduler.py  deepseek_server.py  gemini_server.py  main.py  sendEmail.py  sendNotifyX.py  vocechat_server.py  web_server.py
src/templates/: config.html
